# r-type

./: .clang-format  .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  conanfile.txt  formatter.sh  main.cpp  vcpkg.json
.github/workflows/: Mirror.yml
client/: GameLoop.cpp  GameLoop.hpp  Readme.md  client.cmake  main.cpp
client/system/: EntityDestroyerSystem.hpp  animeSystem.hpp  audioSystem.hpp  clientNetworkSystem.hpp  inputSystem.hpp  loggerSystem.hpp  messageSystem.hpp  networkSystem.hpp  playerSystem.hpp  sfmlSystem.hpp
client/tcp/: tcp.cpp  tcp.hpp
client/udp/: udp.cpp  udp.hpp
ecs/: Readme.md
ecs/component/: component.cpp
ecs/entity/: entity.hpp
ecs/event/: IEvent.hpp  collision.hpp  destroyEntity.hpp  ennemy.hpp  eventManager.hpp  keyPressed.hpp  shoot.hpp  textEntered.hpp
ecs/registry/: registry.hpp
ecs/registry/sparse_array/: sparse_array.hpp
ecs/system/: EnnemySystem.hpp  EntityDestroyerSystem.hpp  HealthSystem.hpp  ISystem.hpp  MoveSystem.hpp  ShootSystem.hpp  system.cpp  system.hpp
entity/: entity.hpp
game/: game.cpp  game.hpp  gameComponent.cpp  gameEntity.cpp  gameEntity.hpp
libs/: depencies.cmake
network/: Readme.md  udp.cpp  udp.hpp
network/compression/: Compression.cpp  Compression.hpp
network/docs/: RFC.txt
network/tcpClient/: tcpClient.cpp  tcpClient.hpp
network/tcpServer/: scoreboard.txt  tcpServer.cpp  tcpServer.hpp
network/udp/: udp.cpp  udp.hpp
registry/: registry.cpp  registry.hpp
registry/sparse_array/: sparse_array.cpp  sparse_array.hpp
server/: RFC.txt  Readme.md  main.cpp  server.cmake  server.cpp  server.hpp
server/event/: bullet.hpp  health.hpp  score.hpp  spawnedEnnemy.hpp
server/src/: socket.cpp  socket.hpp
server/system/: AdminCommandSystem.hpp  EnnemySystem.hpp  EntityDestroyerSystem.hpp  ServerHealthSystem.hpp  ServerShootSystem.hpp  messageSystem.hpp  networkSystem.hpp  serverEventLoaderSystem.hpp  serverNetworkSystem.hpp  serverScoreSystem.hpp
server/tcp/: tcp.cpp  tcp.hpp
server/udp/: main.cpp  udp.cpp  udp.hpp
server/updateGame/: updateGame.cpp  updateGame.hpp
system/: move.cpp
